--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,6 @@
     },
     "rules": {
         "no-console": "off",
-        "eslint linebreak-style": [0, "error", "windows"],
+        "eslint linebreak-style": [0, "error", "windows"]
     }
 }
