--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,15 @@
     },
     "rules": {
         "no-console": "off",
-        "eslint linebreak-style": [0, "error", "windows"]
+        "eslint linebreak-style": [0, "error", "windows"],
+        "object-curly-newline": [
+            "error",
+            {
+            "ObjectExpression": { "consistent": true, "multiline": true },
+            "ObjectPattern": { "consistent": true, "multiline": true },
+            "ImportDeclaration": "never",
+            "ExportDeclaration": { "multiline": true, "minProperties": 3 }
+            }
+        ]
     }
 }
