--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
+    "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.0",
     "amqplib": "^0.10.4",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "fs": "^0.0.1-security",
     "joi": "^17.13.3",
     "nanoid": "^3.1.20",
     "node-pg-migrate": "^7.5.2",
+    "path": "^0.12.7",
     "pg": "^8.12.0"
   }
 }
