--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nanoid": "^3.1.20",
     "node-pg-migrate": "^7.5.2",
     "path": "^0.12.7",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "redis": "^4.7.0"
   }
 }
